--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,37 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
-
-body {
-  /* background-color: skyblue; */
-  padding: 0 !important;
-  margin: 0 !important;
-  font-family: "Ubuntu", sans-serif;
-  box-sizing: border-box;
-}
+@media screen and (max-width: 768px) {
 
 .navbar {
   height: 5rem;
   background-color: #fff !important;
-  z-index: 10 !important;
+  z-index: 100 !important;
 }
 
 .nav-main {
-  padding: 0 5.5rem 0 5rem !important;
+  padding: 0 2rem !important;
   
 }
-
-/* .logo{
-  color: #c72262; 
-  background-image: linear-gradient(135deg, #c72262 20%, #54f11d 56%, #d17ebd 7%); 
-  background-clip: text; 
-  -webkit-background-clip: text; 
-  -webkit-text-fill-color: transparent; 
-  font-weight: 900;
- } */
-.logo{
-  color: #000;
-  font-weight: 800;
- }
-
 
 .navbar-icon {
   font-size: 2.8rem;
@@ -44,30 +22,48 @@ body {
   color: #222222;
 }
 
+.icon-head{
+  display: none !important;
+}
+
 .search-inp {
   border-radius: 2.5rem !important;
+  margin: 0.8rem 0;
 }
+
 .search-btn {
   border-radius: 2.5rem !important;
   background-color: rgb(237, 39, 39) !important;
 }
+
 .search-btn:hover {
   background-color: rgb(237, 39, 39) !important;
 }
+
 .search-btn i {
   margin-right: 0.5rem;
   display: inline;
 }
+
+.nav-right{
+    display: flex;
+    flex-direction: column;
+
+}
+
 .user-list {
   border: 1px solid gray;
   border-radius: 2rem;
   padding: 0 0.4rem;
 }
+
 .user-span {
-  display: flex;
-  align-items: center;
+  display: inline-block;
+
+  /* align-items: center; */
   /* flex-direction: row; */
 }
+
 .user-span :first-child {
   font-size: 1.1rem;
   margin-right: 0.5rem;
@@ -76,32 +72,18 @@ body {
 .user-span i {
   font-size: 2rem;
 }
+
 .dd-menu li a {
   /* color: red; */
   font-size: 1rem;
 }
 /* filter css  */
-
 #filters {
-  overflow-x: auto; /* Enable horizontal scrolling */
-  white-space: nowrap; /* Prevent wrapping */
-  -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
-  scrollbar-width: none; /* Hide scrollbar in Firefox */
-  position: sticky;
-  top: 5rem;
-  z-index: 5;
-  gap: 1.5rem;
-  background-color: #fff;
+ position: none;
 }
-
-#filters::-webkit-scrollbar {
-  display: none; /* Hide scrollbar in Chrome, Safari, and Edge */
-}
-
 .filter {
-  flex: 0 0 auto; /* Prevent filters from shrinking */
+  /* margin-right: 2rem; */
   text-align: center;
-  margin-right: 1rem; /* Add spacing between filters */
   opacity: 0.7;
 }
 .filter:hover {
@@ -111,9 +93,7 @@ body {
 .filter i {
   font-size: 1.2rem;
 }
-
 .filter p {
-  margin: 0; /* Remove default margin for consistent alignment */
   font-size: 0.8rem;
 }
 
@@ -239,4 +219,6 @@ body {
 .f-info-links ul li a:hover {
   text-decoration: underline;
   /* padding: 1rem; */
+}
+
 }
