--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,11 +1,11 @@
 
+
 <nav
   class="navbar navbar-expand-lg bg-body-light border-bottom position-sticky top-0"
 >
   <div class="container-fluid nav-logo nav-main">
-    <a class="navbar-brand" href="/listings"
-      ><i class="fa-regular fa-compass navbar-icon"></i
-    ></a>
+    <a class="nav-link fw-medium d-block d-md-none" href="/" >
+      <h1 class="logo">HouseHunt</h1></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -18,15 +18,17 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link fw-medium" href="/listings">Explore</a>
+      <div class="navbar-nav icon-head">
+        <a class="nav-link fw-medium d-none d-md-block" href="/" >
+          <h1 class="logo">HouseHunt</h1></a>
       </div>
       <div class="navbar-nav ms-auto">
-        <input
-          class="form-control me-2 px-5 py-2 search-inp"
+        <input  
+        id="search-input"    
+          class="me-2 px-3 py-2 search-inp"
           type="search"
           placeholder="Search your destination"
-          aria-label="Search"
+         
         />
         <button class="btn px-3 py-2 search-btn" type="submit">
           <i class="fa-solid fa-magnifying-glass"></i>Search
@@ -34,7 +36,7 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-        <a class="nav-link mx-2" href="/listings/new">Airbnb your home</a>
+        <a class="nav-link mx-2" href="/listings/new">Add your House</a>
         <% if(!currUser){ %>
           <ul class="navbar-nav ">
             <li class="nav-item dropdown user-list">
@@ -52,7 +54,8 @@
           </ul>
         <!-- <a class="nav-link fw-bold " role="button" href="/signup">SignUp</a>
         <a class="nav-link fw-bold " role="button" href="/login">Login</a> -->
-        <% } %> <% if(currUser){ %>
+        <% } %> 
+        <% if(currUser){ %>
         <a class="nav-link fw-medium mx-1 btn search-btn px-3" role="button" href="/logout"
           >Logout</a
         >
@@ -61,4 +64,5 @@
     </div>
   </div>
 </nav>
+<script src="js/script.js"></script>
 
