--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WanderLust</title>
+    <title>HouseHunt</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
@@ -23,11 +23,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/rating.css">
+    <link rel="stylesheet" href="/css/responsive.css">
   </head>
   <body>
     <%- include("../includes/navbar.ejs") %>
     <div class="container">
-      <%- include("../includes/flash.ejs") %> <%- body %>
+      <%- include("../includes/flash.ejs") %> 
+      <%- body %>
     </div>
     <%- include("../includes/footer.ejs") %>
 
