--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,8 +1,9 @@
 <% layout("./layouts/boilerplate") %>
 
 <body>  
-  <div class="row mt-3">
-    <div class="col-6 offset-3">
+  <div class="container-fluid">
+  <div class="row mt-3 row-cols-sm-1">
+    <div class="col-6 offset-3 ">
     <h2 class="mb-3  fs-1 fw-bold">Login</h2>
   <form action="/login" method="POST" class="needs-validation" novalidate>
     <div class="mb-2">
@@ -31,6 +32,7 @@
     </div>   
     <button type="submit" class="btn btn-success mb-2 fw-normal">Login</button>
   </form>
+</div>
 </div>
 </div>
   <!-- <script src="/public/js/script.js"></script> -->
