--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -14,7 +14,7 @@
         ><a href="/twitter"><i class="fa-brands fa-twitter"></i></a
       ></span>
     </div>
-    <div>Wanderlust Private Limited &copy; copyright 2024</div>
+    <div>Househunt Private Limited &copy; copyright 2024</div>
     <div class="f-info-links">
       <ul>
         <li><a href="/privacy">Privacy</a></li>
